--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 body {
   background-image: url("https://image.freepik.com/vector-gratis/fondo-degradado-colores_53876-93208.jpg");
   background-repeat: no-repeat;
-  background-size: 100vw 100vh;
+  background-size: 100vw auto;
   color: #fff;
   display: flex;
   justify-content: space-around;
@@ -15,7 +15,7 @@ body {
   flex-wrap: wrap;
   width: 100%;
   height: 100vh;
-  overflow: scroll;
+  overflow-x: hidden;
 }
 
 .button {
